--- a/index.html
+++ b/index.html
@@ -104,18 +104,24 @@
                 </div>
             </div>
             <div class="cards">
-                <img src="src/assets/imagens/imagem-branca.png" alt="Imagem Branca">
+                <img src="src/assets/imagens/sneakers.png" alt="">
                 <div class="info-card">
-                    <h1>Em Progresso</h1>
+                    <h1>Sneakers</h1>
+                    <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-css3-alt"></i>
+                    <i class="fa-brands fa-js"></i>
                 </div>
                 <div class="description">
                     <span>Ver mais</span>
                 </div>
             </div>
             <div class="cards">
-                <img src="src/assets/imagens/imagem-branca.png" alt="Imagem Branca">
+                <img src="src/assets/imagens/fylo.png" alt="Imagem Branca">
                 <div class="info-card">
-                    <h1>Em Progresso</h1>
+                    <h1>Fylo</h1>
+                    <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-css3-alt"></i>
+                    <i class="fa-brands fa-js"></i>
                 </div>
                 <div class="description">
                     <span>Ver mais</span>
