--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <i class="fa-brands fa-js"></i>
                 </div>
                 <div class="description">
-                    <span>Ver mais</span>
+                    <a href="#prtj"><span>Ver mais</span></a>
                 </div>
             </div>
             <div class="cards">
@@ -100,7 +100,7 @@
                     <i class="fa-brands fa-js"></i>
                 </div>
                 <div class="description">
-                    <span>Ver mais</span>
+                    <a href="#prtj"><span>Ver mais</span></a>
                 </div>
             </div>
             <div class="cards">
@@ -112,7 +112,7 @@
                     <i class="fa-brands fa-js"></i>
                 </div>
                 <div class="description">
-                    <span>Ver mais</span>
+                    <a href="#prtj"><span>Ver mais</span></a>
                 </div>
             </div>
             <div class="cards">
@@ -124,7 +124,7 @@
                     <i class="fa-brands fa-js"></i>
                 </div>
                 <div class="description">
-                    <span>Ver mais</span>
+                    <a href="#prtj"><span>Ver mais</span></a>
                 </div>
             </div>
             <div class="cards">
@@ -133,7 +133,7 @@
                     <h1>Em Progresso</h1>
                 </div>
                 <div class="description">
-                    <span>Ver mais</span>
+                    <a href="#prtj"><span>Ver mais</span></a>
                 </div>
             </div>
             <div class="cards">
@@ -142,7 +142,7 @@
                     <h1>Em Progresso</h1>
                 </div>
                 <div class="description">
-                    <span>Ver mais</span>
+                    <a href="#prtj"><span>Ver mais</span></a>
                 </div>
             </div>
             <div class="cards">
@@ -151,7 +151,7 @@
                     <h1>Em Progresso</h1>
                 </div>
                 <div class="description">
-                    <span>Ver mais</span>
+                    <a href="#prtj"><span>Ver mais</span></a>
                 </div>
             </div>
             <div class="cards">
@@ -160,7 +160,7 @@
                     <h1>Em Progresso</h1>
                 </div>
                 <div class="description">
-                    <span>Ver mais</span>
+                    <a href="#prtj"><span>Ver mais</span></a>
                 </div>
             </div>
             <div class="cards" >
@@ -169,12 +169,11 @@
                     <h1>Em Progresso</h1>
                 </div>
                 <div class="description">
-                    <span>Ver mais</span>
+                    <a href="#prtj"><span>Ver mais</span></a>
                 </div>
             </div>
         </div>
-
-        <div class="sobre-projct">
+        <div class="sobre-projct" id="prtj">
             <i class="fa-solid fa-xmark" id="close"></i>
         </div>
     </section>
