atualização no html

--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
         <h1>Projetos</h1>
         <div class="linha-h1"></div>
         <div class="card-projt">
+
             <div class="cards">
-                <img src="src/assets/imagens/calc.png" alt="">
+                <img src="src/assets/imagens/space.png" alt="Imagem do Projeto">
                 <div class="info-card">
-                    <h1>Calculadora</h1>
+                    <h1>Space Tourism</h1>
+                    <i class="fa-brands fa-react"></i>
                     <i class="fa-brands fa-html5"></i>
                     <i class="fa-brands fa-css3-alt"></i>
                     <i class="fa-brands fa-js"></i>
@@ -91,10 +93,11 @@
                     <a href="#prtj"><span>Ver mais</span></a>
                 </div>
             </div>
+
             <div class="cards">
-                <img src="src/assets/imagens/card.png" alt="">
+                <img src="src/assets/imagens/advice.png" alt="Imagem do Projeto">
                 <div class="info-card">
-                    <h1>Card</h1>
+                    <h1>Advice</h1>
                     <i class="fa-brands fa-html5"></i>
                     <i class="fa-brands fa-css3-alt"></i>
                     <i class="fa-brands fa-js"></i>
@@ -103,6 +106,7 @@
                     <a href="#prtj"><span>Ver mais</span></a>
                 </div>
             </div>
+
             <div class="cards">
                 <img src="src/assets/imagens/sneakers.png" alt="">
                 <div class="info-card">
@@ -115,8 +119,35 @@
                     <a href="#prtj"><span>Ver mais</span></a>
                 </div>
             </div>
+
             <div class="cards">
-                <img src="src/assets/imagens/fylo.png" alt="Imagem Branca">
+                <img src="src/assets/imagens/calc.png" alt="">
+                <div class="info-card">
+                    <h1>Calculadora</h1>
+                    <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-css3-alt"></i>
+                    <i class="fa-brands fa-js"></i>
+                </div>
+                <div class="description">
+                    <a href="#prtj"><span>Ver mais</span></a>
+                </div>
+            </div>
+
+            <div class="cards">
+                <img src="src/assets/imagens/bank.png" alt="Imagem do Projeto">
+                <div class="info-card">
+                    <h1>Bank</h1>
+                    <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-css3-alt"></i>
+                    <i class="fa-brands fa-js"></i>
+                </div>
+                <div class="description">
+                    <a href="#prtj"><span>Ver mais</span></a>
+                </div>
+            </div>
+
+            <div class="cards">
+                <img src="src/assets/imagens/fylo.png" alt="Imagem do Projeto">
                 <div class="info-card">
                     <h1>Fylo</h1>
                     <i class="fa-brands fa-html5"></i>
@@ -127,35 +158,22 @@
                     <a href="#prtj"><span>Ver mais</span></a>
                 </div>
             </div>
+
             <div class="cards">
-                <img src="src/assets/imagens/imagem-branca.png" alt="Imagem Branca">
+                <img src="src/assets/imagens/card.png" alt="">
                 <div class="info-card">
-                    <h1>Em Progresso</h1>
+                    <h1>Card</h1>
+                    <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-css3-alt"></i>
+                    <i class="fa-brands fa-js"></i>
                 </div>
                 <div class="description">
                     <a href="#prtj"><span>Ver mais</span></a>
                 </div>
             </div>
+               
             <div class="cards">
-                <img src="src/assets/imagens/imagem-branca.png" alt="Imagem Branca">
-                <div class="info-card">
-                    <h1>Em Progresso</h1>
-                </div>
-                <div class="description">
-                    <a href="#prtj"><span>Ver mais</span></a>
-                </div>
-            </div>
-            <div class="cards">
-                <img src="src/assets/imagens/imagem-branca.png" alt="Imagem Branca">
-                <div class="info-card">
-                    <h1>Em Progresso</h1>
-                </div>
-                <div class="description">
-                    <a href="#prtj"><span>Ver mais</span></a>
-                </div>
-            </div>
-            <div class="cards">
-                <img src="src/assets/imagens/imagem-branca.png" alt="Imagem Branca">
+                <img src="src/assets/imagens/imagem-branca.png" alt="Imagem do Projeto">
                 <div class="info-card">
                     <h1>Em Progresso</h1>
                 </div>
@@ -164,7 +182,7 @@
                 </div>
             </div>
             <div class="cards" >
-                <img src="src/assets/imagens/imagem-branca.png" alt="Imagem Branca">
+                <img src="src/assets/imagens/imagem-branca.png" alt="Imagem do Projeto">
                 <div class="info-card">
                     <h1>Em Progresso</h1>
                 </div>
