--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/9e387b38a0.js" crossorigin="anonymous"></script>
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+    
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/responsivo.css">
     <title>Walace DEV | Portfólio  </title>
@@ -234,7 +233,8 @@
             </div>
         </div>
     </section>
-
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"><script>
+    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
     <script type="module" src="src/js/index.js"></script>
 </body>
 </html>
