add novo projeto e nova habilidade

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <div class="card-hab"><i class="fa-brands fa-css3-alt"></i></div>
                 <div class="card-hab"><i class="fa-brands fa-js"></i></div>
                 <div class="card-hab"><i class="fa-brands fa-react"></i></div>
+                <div class="card-hab"><i class="fa-brands fa-sass"></i></i></div>
             </div>
         </div>
     </section>
@@ -86,6 +87,18 @@
                 <img src="src/assets/imagens/space.png" alt="Imagem do Projeto">
                 <div class="info-card">
                     <h1>Space Tourism</h1>
+                    <i class="fa-brands fa-react"></i>
+                    <i class="fa-brands fa-js"></i>
+                </div>
+                <div class="description">
+                    <a href="#prtj"><span>Ver mais</span></a>
+                </div>
+            </div>
+
+            <div class="cards">
+                <img src="src/assets/imagens/countries.png" alt="Imagem do Projeto">
+                <div class="info-card">
+                    <h1>Countries</h1>
                     <i class="fa-brands fa-react"></i>
                     <i class="fa-brands fa-js"></i>
                 </div>
@@ -108,7 +121,20 @@
             </div>
 
             <div class="cards">
-                <img src="src/assets/imagens/sneakers.png" alt="">
+                <img src="src/assets/imagens/jokenpo.png" alt="Imagem do Projeto">
+                <div class="info-card">
+                    <h1>Jokenpô</h1>
+                    <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-css3-alt"></i>
+                    <i class="fa-brands fa-js"></i>
+                </div>
+                <div class="description">
+                    <a href="#prtj"><span>Ver mais</span></a>
+                </div>
+            </div>
+
+            <div class="cards">
+                <img src="src/assets/imagens/sneakers.png" alt="Imagem do Projeto">
                 <div class="info-card">
                     <h1>Sneakers</h1>
                     <i class="fa-brands fa-html5"></i>
@@ -121,7 +147,7 @@
             </div>
 
             <div class="cards">
-                <img src="src/assets/imagens/calc.png" alt="">
+                <img src="src/assets/imagens/calc.png" alt="Imagem do Projeto">
                 <div class="info-card">
                     <h1>Calculadora</h1>
                     <i class="fa-brands fa-html5"></i>
@@ -152,31 +178,6 @@
                     <h1>Fylo</h1>
                     <i class="fa-brands fa-html5"></i>
                     <i class="fa-brands fa-css3-alt"></i>
-                    <i class="fa-brands fa-js"></i>
-                </div>
-                <div class="description">
-                    <a href="#prtj"><span>Ver mais</span></a>
-                </div>
-            </div>
-
-            <div class="cards">
-                <img src="src/assets/imagens/card.png" alt="">
-                <div class="info-card">
-                    <h1>Card</h1>
-                    <i class="fa-brands fa-html5"></i>
-                    <i class="fa-brands fa-css3-alt"></i>
-                    <i class="fa-brands fa-js"></i>
-                </div>
-                <div class="description">
-                    <a href="#prtj"><span>Ver mais</span></a>
-                </div>
-            </div>
-               
-            <div class="cards">
-                <img src="src/assets/imagens/countries.png" alt="Imagem do Projeto">
-                <div class="info-card">
-                    <h1>Countries</h1>
-                    <i class="fa-brands fa-react"></i>
                     <i class="fa-brands fa-js"></i>
                 </div>
                 <div class="description">
