adição de habilidades

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="linha-h1"></div>
         <div class="hab-info">
             <p>
-                Minhas habilidades incluem HTML5, CSS3, JavaScript e React, que utilizo para criar interfaces web modernas e responsivas. Estou sempre buscando me atualizar sobre essas tecnologias, acompanhando as últimas tendências e melhores práticas para garantir que meus projetos sejam eficientes e inovadores.
+                Minhas habilidades incluem HTML5, CSS3, JavaScript, React, Sass, Bootstrap que utilizo para criar interfaces web modernas e responsivas. Estou sempre buscando me atualizar sobre essas tecnologias, acompanhando as últimas tendências e melhores práticas para garantir que meus projetos sejam eficientes e inovadores.
 
                 Além de aprimorar minhas habilidades atuais, pretendo adquirir conhecimentos em outras ferramentas e tecnologias para expandir meu repertório. Estou comprometido com o aprendizado contínuo e acredito que a diversificação das minhas habilidades é essencial para me tornar um desenvolvedor ainda mais completo e versátil.
             </p>
@@ -75,6 +75,7 @@
                 <div class="card-hab"><i class="fa-brands fa-js"></i></div>
                 <div class="card-hab"><i class="fa-brands fa-react"></i></div>
                 <div class="card-hab"><i class="fa-brands fa-sass"></i></i></div>
+                <div class="card-hab"><i class="fa-brands fa-bootstrap"></i></div>
             </div>
         </div>
     </section>
