Removendo projeto fylo, e adicionando novo projeto intro-section

--- a/index.html
+++ b/index.html
@@ -187,11 +187,12 @@
             </div>
 
             <div class="cards">
-                <img src="src/assets/imagens/fylo.png" alt="Imagem do Projeto">
+                <img src="src/assets/imagens/intro-section.png" alt="Imagem do Projeto">
                 <div class="info-card">
-                    <h1>Fylo</h1>
+                    <h1>Intro Section</h1>
                     <i class="fa-brands fa-html5"></i>
                     <i class="fa-brands fa-css3-alt"></i>
+                    <i class="fa-brands fa-sass"></i>
                     <i class="fa-brands fa-js"></i>
                 </div>
                 <div class="description">
